--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,17 @@
     "type": "composer-plugin",
     "description": "A composer plugin to install packages as local symbolic links",
     "require": {
-        "composer-plugin-api": "1.*"
+        "composer-plugin-api": "1.*",
+        "vlucas/phpdotenv": "1.*"
     },
     "require-dev": {
         "composer/composer": "1.*"
     },
     "minimum-stability": "dev",
     "autoload": {
-        "psr-0": { "ComposerSymlinker": "src/" }
+        "psr-0": {
+          "ComposerSymlinker": "src/"
+        }
     },
     "extra": {
         "class": "ComposerSymlinker\\SymlinkerPlugin",
