--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "piwi/composer-symlinker",
+    "name": "timhoepfner/composer-symlinker",
     "type": "composer-plugin",
     "description": "A composer plugin to install packages as local symbolic links",
     "require": {
