--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "vlucas/phpdotenv": "1.*"
     },
     "require-dev": {
-        "composer/composer": "1.*"
+        "composer/composer": "1.*",
+        "phpunit/phpunit": "~4.0"
     },
     "minimum-stability": "dev",
     "autoload": {
